--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ colorlog = "^6.8.0"
 black = "^23.12.1"
 pylint = "^3.0.3"
 pylint-django = "^2.5.5"
+psycopg2-binary = "^2.9.9"
 
 
 [build-system]
